changes in documentation, new maps folder, and fixbugs

--- a/Document/AaronMR_Internship_Linz/AaronMR_Internship_Linz.tex
+++ b/Document/AaronMR_Internship_Linz/AaronMR_Internship_Linz.tex
@@ -114,6 +114,9 @@
     		\include{InstallROSinUbuntu}
 		\include{InstallDevelopmentTools}
 		\include{Downloadandcompilethestack}
+		\include{Gmapping}
+		\include{SetupConfigurationNavigationStack}
+		\include{UsingrvizwiththeNavigationStack}
 		%\include{Chapter1}
 		%\include{Chapter2}
 		%\include{Chapter3}
